--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,6 @@
-{"theme_color":"#059669","background_color":"#ffffff","icons":[{"purpose":"maskable","sizes":"512x512","src":"icon512_maskable.png","type":"image/png"},{"purpose":"any","sizes":"512x512","src":"icon512_rounded.png","type":"image/png"}],"orientation":"portrait","display":"standalone","dir":"auto","lang":"en-US","start_url":"/","scope":"/","name":"LSID Studios","short_name":"The LSID Studios Website"}
+{"theme_color":"#ffffff","background_color":"#ffffff","icons":[{"purpose":"maskable","sizes":"512x512","src":"icon512_maskable.png","type":"image/png"},{"purpose":"any","sizes":"512x512","src":"icon512_rounded.png","type":"image/png"}, {
+    "src": "/assets/lsid.svg",
+    "sizes": "144x144",
+    "type": "Image/svg+xml",
+    "purpose": "any"
+}],"orientation":"portrait","display":"fullscreen","dir":"auto","lang":"en-US","start_url":"/","scope":"/","name":"LSID Studios","short_name":"The LSID Studios Website"}
